--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <script type="text/javascript" src="src/zombie.js" charset="UTF-8"></script>
     <script type="text/javascript" src="src/app.js" charset="UTF-8"></script>
     <script type="text/javascript" src="src/title.js" charset="UTF-8"></script>
+    <script type="text/javascript" src="src/slime_green.js" charset="UTF-8"></script>
+    <script type="text/javascript" src="src/slime_red.js" charset="UTF-8"></script>
+    <script type="text/javascript" src="src/slime_yellow.js" charset="UTF-8"></script>
 </head>
 <body>
     <canvas id="gameCanvas" ></canvas>
